the rest of the manual

--- a/index.html
+++ b/index.html
@@ -19,4 +19,14 @@
 <img src="https://raw.githubusercontent.com/xseedgames/mysteria-eu/master/018.png" width="100%"><br><br>
 <img src="https://raw.githubusercontent.com/xseedgames/mysteria-eu/master/019.png" width="100%"><br><br>
 <img src="https://raw.githubusercontent.com/xseedgames/mysteria-eu/master/020.png" width="100%"><br><br>
+<img src="https://raw.githubusercontent.com/xseedgames/mysteria-eu/master/021.png" width="100%"><br><br>
+<img src="https://raw.githubusercontent.com/xseedgames/mysteria-eu/master/022.png" width="100%"><br><br>
+<img src="https://raw.githubusercontent.com/xseedgames/mysteria-eu/master/023.png" width="100%"><br><br>
+<img src="https://raw.githubusercontent.com/xseedgames/mysteria-eu/master/024.png" width="100%"><br><br>
+<img src="https://raw.githubusercontent.com/xseedgames/mysteria-eu/master/025.png" width="100%"><br><br>
+<img src="https://raw.githubusercontent.com/xseedgames/mysteria-eu/master/026.png" width="100%"><br><br>
+<img src="https://raw.githubusercontent.com/xseedgames/mysteria-eu/master/027.png" width="100%"><br><br>
+<img src="https://raw.githubusercontent.com/xseedgames/mysteria-eu/master/028.png" width="100%"><br><br>
+<img src="https://raw.githubusercontent.com/xseedgames/mysteria-eu/master/029.png" width="100%"><br><br>
+<img src="https://raw.githubusercontent.com/xseedgames/mysteria-eu/master/030.png" width="100%"><br><br>
 </html>
